# Advanced-Programming

./: .gitignore  CMakeLists.txt  LIVE_Arguments.c  a.out  basic.c  calcUnionRect.cpp  creating_data_types.c  debugEx.c  forks.c  hanoi.cpp  pointers.c  pointersStructure.c  tesgoogl.cpp
.gitignore/: .gitignore
Blackjack 2/: readme.md
Gil Code/05_Pointers/: a.out
Gil Code/11-Processes/: 02-first_fork  03-fork_bomb  04-exec  05-mini_shell  fact  fact.c  test
Gil Code/12-IPC/: 01-popen  02-pipes  02-pipes.c
Gil Code/14-Signals/: 01-signal.c  01-victim  02-killer  03-self_stopper  03-self_stopper.c  04-alarmed  05-handled  05-handled.c  07-blocking.c  (+1 more)
Hwk1-Basic/: 01-Roberto_Alejandro_Gutierrez.c  a.out  differences.txt
Hwk2-MatrixMultiplication/: 02-Roberto_Alejandro_Gutierrez.c  MatrixMult.c  MatrixMult.h  Res.txt  a.out  main.c  main.cpp  resMat.txt
Hwk3-LinkedLists/: Linked-Lists.c  Linked-Lists.h  linked_list.c  linked_list.h  main.c  test_list  test_list.c
Hwk4-VignereCypher/: 02-pipes.c  a.out  cypherSolver.c  cypherSolver.h  decoded_encoded_aladdin.txt  encoded_aladdin.txt  encoded_attack now.txt  main.c
Hwk5-BlackjackServer/: client  client.c  notes.txt  readme.md  server  server.c  sockets.c  sockets.h
Hwk7-Signals/: pi_client  pi_client.c  pi_server  pi_server.c  test_pi
Hwk8-SimpleBank/: bank_client  bank_client.c  bank_server  bank_server.c  multi_client
Hwk9-GameOfLife/: Makefile  change_image  change_image.c  pgm_image.c  pgm_image.h  sample_2.pgm
Processes/: a.out  exec.c  forks  forks.c  pipes.c  shellProgram.c
Soft Test and Quality/: Actividad13.py  a.out  calcUnionRect.cpp  findLargest.cpp  set_3d_minus.txt  set_3d_test.txt
(+52 files in other folders)
