cmake_minimum_required(VERSION 2.6)
project(Advanced-Programming)


add_executable(creating_data_types creating_data_types.c)
add_executable(basic basic.c)
add_executable(01-Roberto_Alejandro_Gutierrez Hwk1-Basic/01-Roberto_Alejandro_Gutierrez.c)
add_executable(LIVE_Arguments LIVE_Arguments.c)
add_executable(pointers pointers.c)
add_executable(MatrixMult Hwk2-MatrixMultiplication/MatrixMult.c Hwk2-MatrixMultiplication/MatrixMult.h Hwk2-MatrixMultiplication/main.c)
add_executable(pointersStructure pointersStructure.c)
add_executable(Linked-Lists Hwk3-LinkedLists/Linked-Lists.h Hwk3-LinkedLists/Linked-Lists.c Hwk3-LinkedLists/main.c)