cmake_minimum_required(VERSION 2.6)
project(Advanced-Programming)


add_executable(creating_data_types creating_data_types.c)
add_executable(basic basic.c)
add_executable(01-Roberto_Alejandro_Gutierrez Hwk1-Basic/01-Roberto_Alejandro_Gutierrez.c)
add_executable(LIVE_Arguments LIVE_Arguments.c)
add_executable(pointers pointers.c)
add_executable(MatrixMult Hwk2-MatrixMultiplication/MatrixMult.c Hwk2-MatrixMultiplication/MatrixMult.h Hwk2-MatrixMultiplication/main.c)
add_executable(pointersStructure pointersStructure.c)
add_executable(forks Processes/forks.c)
add_executable(linked_list Hwk3-LinkedLists/linked_list.c  Hwk3-LinkedLists/test_list.c)
add_executable(pipes Processes/pipes.c)
add_executable(cypherSolver Hwk4-VignereCypher/cypherSolver.c)
add_executable(02-pipes Hwk4-VignereCypher/02-pipes.c)
add_executable(client Hwk5-BlackjackServer/client.c)
add_executable(server Hwk5-BlackjackServer/server.c)